--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,13 @@ jobs:
           src=$(/usr/bin/curl -Lfs https://raw.githubusercontent.com/acidanthera/Lilu/master/Lilu/Scripts/bootstrap.sh) && eval "$src" || exit 1
       - name: Build
         run: |
-          xcodebuild build clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -jobs 1 -configuration Debug
-          xcodebuild build clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -jobs 1 -configuration Release
+          xcodebuild -configuration Debug build clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -jobs 1 
+          xcodebuild -configuration Release build clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -jobs 1
+      - name: Upload to Artifacts
+        uses: actions/upload-artifact@v4.3.4
+        with:
+          name: Artifacts
+          path: build/*/*.zip
       - name: Upload to Artifacts
         uses: actions/upload-artifact@v4.3.4
         with:
